Disable findcommand tests